# stitchtoon

./: .gitignore  CODE_OF_CONDUCT.md  Makefile  Pipfile  README.md  TODO  codeformat.py  pre-commit.sh  pyproject.toml  requirements.txt  setup.cfg  stitchtoon.spec  tox.ini
.github/workflows/: publish.yml  python-package.yml  python-publish.yml  python-test.yml  test.yml
benchmarks/: __main__.py  bench_detection.py  bench_image_io.py  bench_pipeline.py  core.py  fixtures.py  runner.py
scripts/: formatter.py
src/: stitchtoon.py
src/stitchtoon/: __init__.py  __main__.py  const.py  decorators.py  exc.py  logger.py
src/stitchtoon/cli/: __init__.py  args.py  processor.py
src/stitchtoon/core/: image_handler.py  image_io.py  image_manipulator.py  scanner.py  slices_detector.py  stitcher.py
src/stitchtoon/core/slices_detectors/: __init__.py  auto_detect.py  direct_detector.py  pixel_detect.py  slice.py  slices_detector.py  smart_detect.py  smart_detector.py
src/stitchtoon/detectors/: __init__.py  direct_slicing.py  metadata_slicing.py  pixel_comparison.py  selector.py
src/stitchtoon/models/: __init__.py  app_settings.py
src/stitchtoon/run/: launcher.py
src/stitchtoon/services/: __init__.py  directory_scanner.py  global_logger.py  image_directory.py  image_handler.py  image_manipulator.py  postprocess_runner.py  process.py  progress.py  progressbar.py  scanner.py  settings_handler.py
src/stitchtoon/utils/: constants.py  errors.py  funcs.py
test/: test_manipulator.py  test_scan.py
tests/: conftest.py
tests/core/: test_image_handler.py  test_image_io.py  test_image_manipulator.py  test_slices_detector.py  test_stitcher.py
